# InputManip

./: .gitignore  CMakeLists.txt  README.md  helpers.cpp  helpers.h  main.cpp
linux/: CMakeLists.txt
linux/input_manip/: CMakeLists.txt  helper_macros.h  ioctl_helpers.hpp  main.cpp
mouse_detect/: CMakeLists.txt  MouseDetectorDLL.c  MouseDetectorDLL.h  mdetect.cpp
mouse_mover/: CMakeLists.txt  mmover.cpp
notes/: example_launch.json
windows/: CMakeLists.txt
windows/input_manip/: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp
windows/mouse_detect/: CMakeLists.txt  mdetect.cpp
windows/mouse_mover/: CMakeLists.txt  mmover.cpp
